customer find by id and sort any
